1.0.0 ( r8816 )
---------------

Amended and extended the Maven target set so that it actually works well enough to be useful.

Change the return codes so as to provide easier discrimination of error cases.


1.0.0 ( r8816 )
---------------

Changed the lookup sequence in GantMetaClass adding lookup in the Ant object for a method call as a final
attempt to resolve a name.  This makes Ant. completely optional as requested in GANT-10.

Rearranged the constructors so as to allow for a custom class loader when calling Gant programmatically.

Reverted to -D processing as in 0.3.1 which actually works with Commons CLI 1.0 even though it is a bug.
0.3.2 and 0.3.3 were broken as -D processing did not work at all.

Added the ** * mechanism for creating target set and tool objects using constructor parameters.

Stopped Gant from issuing FileNotFoundException.

Released to coincide with release of Groovy 1.5.0.

0.3.3 ( r8490 )
---------------

Created a new option (-d,--cachedir) to specify a cache directory for the caching system.  This is used by
Grails.  Gant release rushed out for the Grails 1.0 release.

Formally announced deprecation of task, should now use target.


0.3.2 (r8191)
-------------

Fixed problem with -V option.

Started a Maven 2 build capability -- this is work in progress and not complete.

Restructured source to fit better with the Maven 2 directory structure.

Corrected various problems with return values.

Changed the location of the repository to http://svn.codehaus.org/groovy/gant

0.3.1 (r6962)
-------------

Added returning a sensible return code -- 0 for success and 1 for failure.

Added extending of the classpath:
      --lib <path> for individual jars.
      Searching ~/.ant/lib for user collections of jar files.
      Searching ANT_HOME/lib for jar files if ANT_HOME is defined.

0.3.0 (r6320)
-------------

Works with both Groovy 1.0 release and the Groovy 1.1-beta-1 release.
