@@ -131,7 +131,7 @@ target ( 'default' : '' ) { something ( ) }
   void testToolClassNoFile ( ) {
     System.setIn ( new StringBufferInputStream ( toolBuildScriptFile.replace ( toolClassFilePath , nonExistentFilePath ) ) )
     assertEquals ( 2 , gant.process ( [ '-f' ,  '-'  , 'flob'] as String[] ) )
-    assertEquals ( 'Standard input, line 1 -- ' + nonExistentFilePath + ' (No such file or directory)\n' , output )
+    assertEquals ( 'Standard input, line 1 -- Error evaluating Gantfile: ' + nonExistentFilePath + ' (No such file or directory)\n' , output )
   }
   void testTargetsDefaultClassClass ( ) {
     System.setIn ( new StringBufferInputStream ( targetsBuildClassClass ) )
@@ -205,7 +205,7 @@ target ( 'default' : '' ) { something ( ) }
     System.setIn ( new StringBufferInputStream ( targetsBuildClassFile.replace ( targetsClassFilePath , nonExistentFilePath ) ) )
     assertEquals ( 2 , gant.process ( [ '-f' ,  '-'  , 'flob'] as String[] ) )
     //  This is a weird message, should be better than this.
-    assertEquals ( 'Standard input, line 1 -- ' + nonExistentFilePath + ' (' + nonExistentFilePath + ')\n' , output )
+    assertEquals ( 'Standard input, line 1 -- Error evaluating Gantfile: ' + nonExistentFilePath + ' (' + nonExistentFilePath + ')\n' , output )
   }
   /*
   void testTargetsDefaultScriptClass ( ) {
@@ -279,7 +279,7 @@ target ( 'default' : '' ) { something ( ) }
     System.setIn ( new StringBufferInputStream ( targetsBuildScriptFile.replace ( targetsScriptFilePath , nonExistentFilePath ) ) )
     assertEquals ( 2 , gant.process ( [ '-f' ,  '-'  , 'flob'] as String[] ) )
     //  This is a weird message, should be better than this.
-    assertEquals ( 'Standard input, line 1 -- ' + nonExistentFilePath + ' (' + nonExistentFilePath + ')\n' , output )
+    assertEquals ( 'Standard input, line 1 -- Error evaluating Gantfile: ' + nonExistentFilePath + ' (' + nonExistentFilePath + ')\n' , output )
   }
 
   ////////  Test multiple include of the same targets.
